Bug 1565838 - don't check timestamp of EOS samples. r=jya, a=RyanVM

Bug 1540748/D28167 checks the output sample timestamp against the
time parsed by demuxer to determine the validness. However, unlike
Android builtin MP3 decoder which sets EOS flag in the final valid
output, the Samsung MP3 decoder always emit additional EOS sample
with invalid timestamp. To address this, the timestamp check should
be ignore for EOS samples.

Differential Revision: https://phabricator.services.mozilla.com/D41872